# PoE2-Trade-Bot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/: poe2bot.service
docs/superpowers/: PHASE2-FOLLOWUPS.md
docs/superpowers/plans/: 2026-06-27-poe2-trade-bot-phase1.md  2026-06-29-currency-display-breakpoint.md
docs/superpowers/specs/: 2026-06-27-phase2a-currency-multicategory-design.md  2026-06-27-phase2b-uniques-junkgate-design.md  2026-06-27-poe2-trade-bot-design.md  2026-06-28-cusum-detector-design.md  2026-06-29-currency-display-breakpoint-design.md
poe2bot/: alerts.py  bot.py  categories.py  config.py  display.py  health.py  main.py  models.py  scheduler.py  signals.py  store.py
poe2bot/detector/: engine.py  gating.py
poe2bot/sources/: normalize.py  poe2scout.py
tests/: test_alerts.py  test_bot_commands.py  test_config.py  test_display.py  test_engine.py  test_gating.py  test_health.py  test_models.py  test_normalize.py  test_poe2scout.py  test_scheduler.py  test_signals.py  test_smoke.py  test_smoke_import.py  test_store.py
tests/fixtures/: poe2scout_currency.json  poe2scout_leagues.json
