[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poe2bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.3,<3",
  "aiohttp>=3.9",
  "yarl>=1.9",
  "aiosqlite>=0.19",
  "APScheduler>=3.10,<4",
]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["poe2bot*"]
